--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -366,6 +366,13 @@ footer a:hover {
   }
 }
 
+#stations {
+    display: none;
+}
+
+#nextBusTime {
+    display: none;
+}
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) { }
 
