--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -373,6 +373,12 @@ footer a:hover {
 #nextBusTime {
     display: none;
 }
+
+.showStation {
+    width: 100%;
+    padding: 10px 10px;
+    font-size: 18px;
+}
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) { }
 
