--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container">
   <footer>
     <div class="row">
-      <p>&copy; Massively Successful Company, 2015</p>
+      <!-- <p>&copy; Massively Successful Company, 2015</p> -->
     </div>
 
   </footer>
