--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top" data-bind="visible: isLoggedIn">
   <div class="container">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">Vidpub</a>
+      <a href="/" class="navbar-brand">NextBus</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,14 +10,6 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="catalog">Catalog <span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="catalog">
-            {% for post in site.posts %}
-            <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
         <li>
           <a href="/about">About</a>
         </li>
